--- a/android-app/res/layout/frag_schedule_full.xml
+++ b/android-app/res/layout/frag_schedule_full.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent">
 
     <ListView
-            android:id="@+id/frag_sched_full"
+            android:id="@+id/frag_sched_full_lv_showtimes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
