--- a/android-app/res/layout/frag_sliding_menu.xml
+++ b/android-app/res/layout/frag_sliding_menu.xml
@@ -2,7 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:background="@color/fringe_yellow"
+              android:background="@color/fringe_black"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
