--- a/android-app/res/layout/view_list_showtime.xml
+++ b/android-app/res/layout/view_list_showtime.xml
@@ -8,6 +8,7 @@
             android:id="@+id/view_list_showtime_iv_bg"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:minHeight="200dip"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:contentDescription="showtime image"/>
@@ -30,6 +31,7 @@
             android:id="@+id/view_list_st_tv_title"
             android:layout_marginLeft="4dip"
             android:layout_toRightOf="@id/view_list_st_tv_time"
+            android:paddingTop="10dip"
             android:textColor="@color/fringe_white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -48,6 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:background="@color/fringe_transparent"
             android:src="@android:drawable/ic_menu_add"/>
     </RelativeLayout>
 
