--- a/android-app/res/layout/frag_schedule_full_map.xml
+++ b/android-app/res/layout/frag_schedule_full_map.xml
@@ -4,8 +4,10 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <android.support.v4.view.ViewPager
-        android:id="@+id/frag_schedule_full_vp"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/frag_schedule_full_map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
