--- a/android-app/res/layout/frag_schedule_full_map.xml
+++ b/android-app/res/layout/frag_schedule_full_map.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -9,5 +9,21 @@
         android:id="@+id/frag_schedule_full_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <RelativeLayout
+        android:id="@+id/frag_schedule_details_panel"
+        android:layout_width="match_parent"
+        android:background="@color/Gainsboro"
+        android:layout_alignParentBottom="true"
+        android:layout_height="0dip">
 
-</LinearLayout>
+        <ImageButton
+            android:src="@drawable/icon_close"
+            android:layout_height="48dip"
+            android:layout_width="48dip"
+            android:background="@null"
+            android:contentDescription="close"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"/>
+
+    </RelativeLayout>
+</RelativeLayout>
