--- a/android-app/res/layout/frag_schedule_full_list.xml
+++ b/android-app/res/layout/frag_schedule_full_list.xml
@@ -7,6 +7,7 @@
 
     <ListView
         android:id="@+id/frag_sched_full_lv_showtimes"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
