refactoring some things

--- a/android-app/res/layout/frag_artist_info.xml
+++ b/android-app/res/layout/frag_artist_info.xml
@@ -4,14 +4,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/ab_background_textured_fringe">
-    <LinearLayout
-                  android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="0dp"
-                  android:layout_weight="5"
-            >
-
+        android:background="@color/fringe_black">
         <android.support.v4.view.ViewPager
                 android:id="@+id/artist_picture_pager"
                 android:layout_width="fill_parent"
@@ -24,31 +17,7 @@
                 android:layout_height="wrap_content"
                 android:padding="10dip" />
 
-    </LinearLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        >
-        <ImageView
 
-                android:scaleType="fitCenter"
-
-                android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/facebook_button"
-            android:id="@+id/facebook_btn" android:layout_alignParentLeft="true" android:layout_marginLeft="10dp"
-            android:layout_alignParentTop="true"/>
-        <ImageView
-                android:scaleType="fitCenter"
-
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/twitter_button"
-                android:layout_toRightOf="@id/facebook_btn" android:layout_marginLeft="0dp"
-                android:layout_alignTop="@+id/twitter_btn"/>
-
-        </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -72,51 +41,14 @@
                 android:textSize="10dp"
                 android:text="@string/sample_venue_name"  />
        </LinearLayout>
-
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_height="0dp"
-            android:layout_weight="7"
-            android:orientation="horizontal"
-            android:background="@drawable/open_book"
-
-            >
-
-    <TextView
-
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:textSize="16dp"
-        android:layout_height="match_parent"
-        android:textColor="@color/Orange"
-        android:text="@string/artist_bio_sample"
-        android:padding="15dp"
-        android:background="#80808080"
-
-        />
-        <TextView
-
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:textSize="16dp"
-                android:layout_height="match_parent"
-                android:textColor="@color/Orange"
-                android:text="@string/artist_bio_sample2"
-                android:padding="15dp"
-                android:background="#80808080"
-
-                />
-    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="Other Shows"
-            android:background="@color/White"/>
+        android:textSize="20sp"
+        android:textColor="@color/fringe_yellow"
+        android:text="Other Shows"/>
     <ListView
         android:id="@+id/other_shows_listview"
         android:layout_height="0dp"
