--- a/android-app/res/values/colors.xml
+++ b/android-app/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="fringe_transparent_yellow">#80F2BA38</color>
     <color name="fringe_transparent">#80000000</color>
+    <color name="fringe_full_transparent">#00000000</color>
 
     <color name="darker_gray">#555555</color>
     <color name="main_menu">#60666666</color>
