--- a/android-app/res/layout/frag_artist_info.xml
+++ b/android-app/res/layout/frag_artist_info.xml
@@ -8,6 +8,7 @@
         <android.support.v4.view.ViewPager
                 android:id="@+id/artist_picture_pager"
                 android:layout_width="fill_parent"
+                android:minHeight="50dip"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
 
@@ -17,30 +18,28 @@
                 android:layout_height="wrap_content"
                 android:padding="10dip" />
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="wrap_content"
+        android:padding="15dip"
         android:orientation="horizontal"
-        android:layout_marginRight="10dp"
-
-        android:layout_marginLeft="10dp"
-       >
-        <TextView
-            android:id="@+id/timeText"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="June 30, 6:00PM" />
+        android:weightSum="1">
         <Button
-                android:id="@+id/timeText"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textSize="10dp"
-                android:text="@string/sample_venue_name"  />
-       </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="FACEBOOK"
+            android:background="@drawable/btn_main"
+            android:layout_marginRight="5dip"
+            android:layout_weight=".5"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
+            android:text="TWITTER"
+            android:background="@drawable/btn_main"
+            android:layout_weight=".5"/>
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
