--- a/android-app/res/layout/view_list_showtime.xml
+++ b/android-app/res/layout/view_list_showtime.xml
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:background="@null"
+            android:background="@drawable/btn_main_transparent"
             android:src="@android:drawable/ic_menu_add"/>
     </RelativeLayout>
 
