--- a/android-app/res/layout/frag_artist_info.xml
+++ b/android-app/res/layout/frag_artist_info.xml
@@ -40,7 +40,39 @@
             android:background="@drawable/btn_main"
             android:layout_weight=".5"/>
     </LinearLayout>
+    <RelativeLayout
+        android:padding="10dip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/frag_artist_tv_show_title"
+            android:textColor="@color/fringe_yellow"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/frag_artist_tv_show_info"
+            android:textColor="@color/fringe_white"
+            android:layout_below="@id/frag_artist_tv_show_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/frag_artist_tv_artist_title"
+            android:textColor="@color/fringe_yellow"
+            android:textSize="20sp"
+            android:layout_below="@id/frag_artist_tv_show_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/frag_artist_tv_artist_bio"
+            android:textColor="@color/fringe_white"
+            android:layout_below="@id/frag_artist_tv_artist_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </RelativeLayout>
     <TextView
+        android:id="@+id/frag_artist_tv_other"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -52,8 +84,5 @@
         android:id="@+id/other_shows_listview"
         android:layout_height="0dp"
         android:layout_weight="5"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        />
+        android:layout_width="match_parent"/>
 </LinearLayout>
