--- a/android-app/res/layout/view_photo.xml
+++ b/android-app/res/layout/view_photo.xml
@@ -2,14 +2,14 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:minHeight="200dip"
+              android:minHeight="150dip"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/view_photo_iv_image"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:minHeight="200dip"
+        android:minHeight="150dip"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:contentDescription="showtime image"/>
