--- a/android-app/res/layout/frag_sliding_menu.xml
+++ b/android-app/res/layout/frag_sliding_menu.xml
@@ -6,12 +6,21 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
         <ListView
+                android:layout_marginTop="10dip"
                 android:id="@+id/frag_sliding_menu_lv_menu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
+        <ImageView
+                android:src="@drawable/logo"
+                android:contentDescription="icon"
 
 
+                android:layout_above="@+id/frag_sliding_menu_foot"
+                android:layout_centerHorizontal="true"
+                android:layout_width="100dip"
+                android:layout_height="100dip"/>
         <LinearLayout
+                android:id="@+id/frag_sliding_menu_foot"
                 android:background="@color/fringe_yellow"
                 android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
