--- a/android-app/res/layout/frag_artist_info.xml
+++ b/android-app/res/layout/frag_artist_info.xml
@@ -87,7 +87,7 @@
         android:layout_marginTop="100dip"
         android:layout_height="wrap_content"
         android:handle="@+id/frag_artist_tv_other"
-        android:content="@+id/other_shows_listview">
+        android:content="@+id/others_shows_container">
 
             <TextView
                 android:id="@+id/frag_artist_tv_other"
@@ -99,10 +99,16 @@
                 android:textStyle="italic"
                 android:textColor="@color/fringe_white"
                 android:text="Other Shows"/>
+        <LinearLayout
+            android:id="@+id/others_shows_container"
+            android:background="@color/fringe_black"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent">
         <ListView
             android:id="@+id/other_shows_listview"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="5"
             android:layout_width="match_parent"/>
+        </LinearLayout>
     </com.atl.fringe.ui.component.FixedSlidingDrawer>
 </RelativeLayout>
