--- a/android-app/res/layout/frag_artist_page.xml
+++ b/android-app/res/layout/frag_artist_page.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -12,14 +12,25 @@
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:contentDescription="showtime image"/>
+    <LinearLayout
+        android:background="@color/fringe_transparent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/frag_artist_page_tv_artist_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:layout_marginTop="20dip"
+            android:textColor="@color/fringe_yellow"/>
+        <TextView
+            android:id="@+id/frag_artist_page_tv_artists_bio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15dip"
+            android:textColor="@color/fringe_white"/>
 
-    <TextView
-        android:id="@+id/frag_artist_page_tv_artist_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="21sp"
-        android:textColor="@color/fringe_yellow"/>
+    </LinearLayout>
 
 
-
-</LinearLayout>
+</RelativeLayout>
