--- a/android-app/res/layout/frag_schedule_full_map.xml
+++ b/android-app/res/layout/frag_schedule_full_map.xml
@@ -69,6 +69,31 @@
             android:maxLines="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/frag_sched_st_tv_sub_title"
+            android:layout_marginTop="15dip"
+            android:orientation="horizontal"
+            android:weightSum="1">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/frag_sched_st_btn_call"
+                android:text="CALL"
+                android:background="@drawable/btn_main"
+                android:layout_marginRight="5dip"
+                android:layout_weight=".5"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/frag_sched_st_btn_directions"
+                android:layout_marginLeft="5dip"
+                android:text="DIRECTIONS"
+                android:background="@drawable/btn_main"
+                android:layout_weight=".5"/>
+        </LinearLayout>
         <TextView
             android:id="@+id/frag_sched_st_tv_show_showtimes"
             android:layout_width="match_parent"
@@ -81,7 +106,7 @@
             android:text="&#8595; SHOW TIMES &#8595;"/>
         <ListView
             android:id="@+id/frag_sched_st_lv_show_showtimes"
-            android:layout_marginTop="130dip"
+            android:layout_marginTop="145dip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@id/frag_sched_st_tv_show_showtimes"/>
